--- a/Shop/package.json
+++ b/Shop/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@angular/service-worker": "~12.1.0",
     "ngx-quill": "^14.1.2",
     "quill": "^1.3.7",
     "rxjs": "~6.6.0",
